<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dark.webprog26.lawyerquiz.BuyFullVersionActivity">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/e_mail"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/phone_number"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/what_r_u_interesting_in"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <EditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minLines="20"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp"
                    android:text="@string/send"
                    android:background="@drawable/controls_selector"
                    android:theme="@style/ControlsButtons"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnBuyFullVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/buy_full_version_offer"
                android:background="@drawable/controls_selector"
                android:theme="@style/ControlsButtons"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
